--- a/GoogleSearchImageTest/packages.config
+++ b/GoogleSearchImageTest/packages.config
@@ -13,6 +13,7 @@
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.SelfHost" version="5.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
@@ -21,5 +22,13 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net452" />
+  <package id="Ninject.MVC5" version="3.2.1.0" targetFramework="net452" />
+  <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net452" />
+  <package id="Ninject.Web.Common.Selfhost" version="3.2.0.0" targetFramework="net452" />
+  <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net452" />
+  <package id="Ninject.Web.WebApi" version="3.2.4.0" targetFramework="net452" />
+  <package id="Ninject.Web.WebApi.WebHost" version="3.2.4.0" targetFramework="net452" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
